# ChangeLog for sci-chemistry/relax
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/relax/ChangeLog,v 1.4 2013/05/14 14:36:18 jlec Exp $

  14 May 2013; Justin Lecher <jlec@gentoo.org> relax-2.2.5.ebuild:
  Add missing dep on dev-python/wxpython

*relax-2.2.5 (13 May 2013)

  13 May 2013; Justin Lecher <jlec@gentoo.org> +relax-2.2.5.ebuild:
  Version Bump

*relax-2.2.1 (04 Feb 2013)

  04 Feb 2013; Justin Lecher <jlec@gentoo.org> +relax-2.2.1.ebuild,
  +files/relax-2.2.1-gentoo.patch, metadata.xml:
  Version BUmp

*relax-2.1.0 (19 Jul 2012)

  19 Jul 2012; Justin Lecher <jlec@gentoo.org> +relax-2.1.0.ebuild,
  +files/relax-2.1.0-gentoo.patch, +metadata.xml:
  New addition
