@@ -7,14 +7,14 @@ DIST relax-2.1.0.src.tar.bz2 22054720 SHA256 e7908dbf774e1eb866f45fc222d14935624
 DIST relax-2.2.1.src.tar.bz2 58950056 SHA256 532fabd9f8e3c7503ee9b75f690869898f639526e0b36c858f66faddba6d3831 SHA512 d6bc574d9ff0baed5f08599df585354b2e0aec263adb33773aeec5392bb26efe43d8626cea13e789b2d1346bfe763511882dfe2c3ee8935ae4c9c0955f76ba79 WHIRLPOOL a561c0c25e0642aa9190233e4ed7fb045f7f891c690d662a559cc3e6f1f7da27977fc8e27c0cc27ab3c0b9624ac9bd606ffa6f7cb77e77bef8dae7b88430116d
 DIST relax-2.2.5.src.tar.bz2 59081139 SHA256 1f62d5e3294accab2baee912216d1651d9ec43b8b33d7f8d434c125c200991fe SHA512 bffdde3fd4644e730d41b1a67e1f43f07f6a9426bd9f714aea59a92c2868e5467adc5bc57326e1c8904708b13b13482867e040fc28373d1b5029b577b400895f WHIRLPOOL d3e5817e7de0d9bae830cb195be1d90a83020c544bdb06b31958f07e7b0309189ae48a3f21a12955f457fa86a21c8764b619a62a6d8a966be46bcdd4b5c52a90
 EBUILD relax-2.1.0.ebuild 1144 SHA256 8d8955bb6bad56e10a9028ffff89b3c57b64db418cecb893f01b5e04acae20f3 SHA512 bb3e66a8a94d2f4df8eef3b031054656c6ed19f363ae583c1aea82385b68daa462870d530789f852adbc100ff346e1b66b5ee5831ee29841c0b664be0f10b0fd WHIRLPOOL 8bafd92268d8aa3acc650769a378d73ae493b1102a52546e884f2d18b3ba92ee7c35e98e4896e807ad1d72c289fc6fb50a32c7c374896df5c3257ecab37f1414
-EBUILD relax-2.2.1.ebuild 1298 SHA256 37cccca7f3d261e0e7347cac8afa9c262258ccdad4d6eea998083c9f85ef7b22 SHA512 9a361d2a3078a67586f7364315fff0d5e5e14d47678ef0b70f331e2ba6295e3759604cde109317e8e3cdfc822a5e8ef144d3de89bfd50815fdce3020c75288ce WHIRLPOOL 186db443dde2cec598595f2ea7cd0cdbcfc8500552580525de513dcb439babf77cc9bffcfdb867792ccb11fbfaaa0a686909516553799e6432f2c26504497db7
-EBUILD relax-2.2.5.ebuild 1451 SHA256 68aab06d8b7a8bb92c70bdc717ba9cfaf081f5d696b9753d529ab98a193ff189 SHA512 2c3306bf91c2f40782664495df97fca3bb248447b1e92e1b718c2486fbcd7b7e2c5c291b2aeeed4817f8dd27ebb51bd1054bff2f3c30381f9634fdad86e67e23 WHIRLPOOL c3ba5a99c5720428386cb30ff0e26aa0be7c18760a5a83393fae550e432abc7600df909bd4f614fce3534389de5fe2380a46711791c8eaf40f499449bf0aca50
-MISC ChangeLog 753 SHA256 bf2ed1950aab9e7316194fa553a3dab93ad4840a7b542a1f4a07e6a870e9edf8 SHA512 ec33f1d8ef4957dfc912dcc4f7474d92726e5d26379b0861ba00a4e9a3cbc06a07f8315983f3b04d6ceb7619ef4bf0c1f1102e98ce2dbaae7b5db8c9eb60c526 WHIRLPOOL 7108b3655ccde5b8843ee6333776026c6b65c558e03eb3c706d450cc46886f9c471e9c5a0e15c16019bdc69e50a6bf9859b378a5e9c2675dbe529a896c9c45ee
+EBUILD relax-2.2.1.ebuild 1353 SHA256 11099f62e190e06f7dc1e0de1327eea04915797cc6104a4003588fe62ef29c21 SHA512 977b647933c1b3da65307038a9f2212cd57404d352abcb37385d44c4e2b3462e5c1deaabc63dec5a1901dbc8a6511d71627317d5da9e63619dc6470231937245 WHIRLPOOL 266a3321fab77adf0cd547bdf3b8063925e162d8ceccd3db60b6583bb8170d0c69851b90c50fb88a2829cac94d32f2700fc99d02633b7af5d81251948a5ae03c
+EBUILD relax-2.2.5.ebuild 1532 SHA256 e67d978853d6348b05f519d4ca2811651f9be937568211281c2d3ef0b32089ae SHA512 21a7aae6e02c213081a78cf05b186d4345239fc092880cde1b4ee82fb1e3cbb2796ae6c8f595973d66dc9d8b08678de2c4ee35a8ed9129aa6423141c0d3df4fc WHIRLPOOL 73431dd5de123298bad4b28e84664942a5375bd4be53ffd7eeb666780f80f5656385901b460ec39b6241879f3b3b728e2221c0083d14576a060a5c1f2b4c6f8e
+MISC ChangeLog 926 SHA256 a7a5d8471d674d78c1abca19e6a0484c11d019c9eb7d82076802208c82e94d18 SHA512 32c11bb4fb24caa6422ae730834f7460ecde0d26a860cba8a1efb94d99e4cd8b6009695102ed0fdceb3efc86891851f96ff75eb45971f82188d7610ad4cc11c1 WHIRLPOOL 364be7c18cc098bd8684d80b43c60a3707df1a5a80a3b20cfb523bc93cce5d206562a82be0a12cf3cfa886c9e633d3d0ed191b3eab580d8b8a2c3ff9928b72f4
 MISC metadata.xml 1315 SHA256 58aef1b2b940b7211a85032dfc7212025aca6a3cd313b1a6e203854bbd3dd03e SHA512 dcb1d935782546693b79aa74dc37d55701ff4cb1756860a7f0d9919534ad2ae6f1dcad20cace867b10297c577cb6444dd5e212b13f57c3d81b30b382d8458c04 WHIRLPOOL e2de7c85fb3494a98c2ee1b08dd06d28676f43f64367ad29a8723f712e12e9052daa82794bb6626506de568701b1ea09efe059a8d3a13f6aee5fd607a913e441
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREKAAYFAlGSS+MACgkQgAnW8HDreRYAsACfYMbVsoPvqQpaWr8BXC8HbpRH
-nBkAnRDaOmiPPLe4RFplarbjnGq5MA1f
-=f6Zm
+iEYEAREKAAYFAlGmLGgACgkQgAnW8HDreRagIwCeIQYs47xGkd177Y7PUDgD+ATO
+BNwAn2o6Vi5WuwRchCc1956u3smu1Pw4
+=m9SK
 -----END PGP SIGNATURE-----
